--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.0",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "autoprefixer": "^10.4.4",
