--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "12.1.4",
     "next-seo": "^5.3.0",
     "postcss": "^8.4.12",
+    "react-input-range": "^1.3.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   }
